tests/cases/fail/native_method.p4
class Bad:
    native def nope(self: Bad) -> int

def main() -> None:
    print(1)
